Update views and navigation

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,3 +2,25 @@
     display: inline-block;
     margin-left: 17px;
 }
+
+.no-padding {
+    padding: 0 !important;
+}
+.left-padding {
+    padding-left: 15px !important;
+}
+.user-name {
+    padding-top: 15px;
+}
+.logout {
+    padding-left: 0;
+}
+.nav.navbar-right li {
+    .btn {
+        color: #fff !important;
+        margin-top: 5%;
+    }
+    .btn-danger:hover {
+        background-color: darken(#d9534f, 20%) !important;
+    }
+}
